@@ -21,6 +21,8 @@ S3method(getGeneSet,CC)
 S3method(getGeneSet,GO)
 S3method(getGeneSet,KEGG)
 S3method(getGeneSet,MF)
+S3method(getGeneSet,USER_DEFINED)
+export(GSEA)
 export(Gff2GeneTable)
 export(bitr)
 export(buildGOmap)
@@ -30,6 +32,7 @@ export(enrichDAVID)
 export(enrichGO)
 export(enrichKEGG)
 export(enrichMap)
+export(enricher)
 export(groupGO)
 export(gseGO)
 export(gseKEGG)
